--- a/JongSnamFootball.Entities/JongSnamFootball.Entities.csproj
+++ b/JongSnamFootball.Entities/JongSnamFootball.Entities.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
